--- a/.github/workflows/sync-boostlook-css.yml
+++ b/.github/workflows/sync-boostlook-css.yml
@@ -60,15 +60,11 @@ jobs:
           fi
       - name: Trigger website-v2-docs ui-release workflow
         if: success()
-        env:
-          GH_TOKEN: ${{ secrets.WEBSITE_V2_PAT }}
         run: |
-          echo "$GH_TOKEN" | gh auth login --with-token
+          echo "${{ secrets.WEBSITE_V2_PAT }}" | gh auth login --with-token
           gh workflow run ui-release.yml --repo boostorg/website-v2-docs --ref develop
       - name: Trigger website-v2-docs publish workflow
         if: success()
-        env:
-          GH_TOKEN: ${{ secrets.WEBSITE_V2_PAT }}
         run: |
-          echo "$GH_TOKEN" | gh auth login --with-token
+          echo "${{ secrets.WEBSITE_V2_PAT }}" | gh auth login --with-token
           gh workflow run publish.yml --repo boostorg/website-v2-docs --ref develop
